feat: Exercise 14 Geometric Calculator has been added, refactor: Changes have been made to the organization of the folders

--- a/index.html
+++ b/index.html
@@ -376,72 +376,72 @@
           <nav>
             <ul>
               <li>
-                <a href="/js/exercicios/exercicio-1/p1-cadastro.html"
+                <a href="/js/exercicios/exercicio-1/index.html"
                   >Exercício 1: Cadastro de Recrutas.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-1/p2-calculadora.html"
+                <a href="/js/exercicios/exercicio-2/index.html"
                   >Exercício 2: Calculadora de 4 Operações.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-2/p1-teste_de_velocidade.html"
+                <a href="/js/exercicios/exercicio-3/index.html"
                   >Exercício 3: Teste de Velocidade.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-2/p2-calculo_de_dano.html"
+                <a href="/js/exercicios/exercicio-4/index.html"
                   >Exercício 4: Cálculo de Dano.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-3/conversor.html"
+                <a href="/js/exercicios/exercicio-5/index.html"
                   >Exercício 5: Conversor de Medidas.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-4/novas_cidades.html"
+                <a href="/js/exercicios/exercicio-6/index.html"
                   >Exercício 6: Visitando Novas Cidades.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-5/menu_interativo.html"
+                <a href="/js/exercicios/exercicio-7/index.html"
                   >Exercício 7: Menu Interativo.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-5/controle_financeiro.html"
+                <a href="/js/exercicios/exercicio-8/index.html"
                   >Exercício 8: Controle Financeiro.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-6/robo_da_tabuada.html"
+                <a href="/js/exercicios/exercicio-9/index.html"
                   >Exercício 9: Robô da Tabuada.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-6/procurando_palindromos.html"
+                <a href="/js/exercicios/exercicio-10/index.html"
                   >Exercício 10: Procurando Palíndromos.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-7/fila_de_espera.html"
+                <a href="/js/exercicios/exercicio-11/index.html"
                   >Exercício 11: Fila de Espera.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-7/pilha_de_cartas.html"
+                <a href="/js/exercicios/exercicio-12/index.html"
                   >Exercício 12: Pilha de Cartas.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-8/cadastro_de_imoveis.html"
+                <a href="/js/exercicios/exercicio-13/index.html"
                   >Exercício 13: Cadastro de Imóveis.</a
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-14/calculadora_geométrica.html">Exercício 14: Calculadora Geométrica.</a>
+                <a href="/js/exercicios/exercicio-14/index.html">Exercício 14: Calculadora Geométrica.</a>
               </li>
               <li>
                 <a href="/js/exercicios/exercicio-">Exercício 15: .</a>
