--- a/js/comparação_de_dados/index.html
+++ b/js/comparação_de_dados/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Comparação de dados</title>
   </head>
@@ -11,12 +13,12 @@
       <nav>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-1/p2-calculadora.html"
-          >Exercício 2: Calculadora de 4 Operações.</a
+          href="/js/exercicios/exercicio-2/index.html"
+          >Exercício 2: Calculadora de 4 Operações</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/operadores_logicos/index.html"
-          >Proxima aula: Operadores Lógicos.</a
+          >Operadores Lógicos</a
         >
       </nav>
       <h1>Comparação de dados</h1>
