--- a/js/condicionais/if_else/index.html
+++ b/js/condicionais/if_else/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Estruturas Condicionais: IF e ELSE</title>
   </head>
@@ -12,11 +14,11 @@
         <a
           class="nav_pages"
           href="/js/operadores_logicos/index.html"
-          >Aula anterior: Operadores Lógicos.</a
+          >Operadores Lógicos</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
-        <a class="nav_pages" href="/js/exercicios/exercicio-2/p1-teste_de_velocidade.html"
-          >Exercício 3: teste de velocidade.</a
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+        <a class="nav_pages" href="/js/exercicios/exercicio-3/index.html"
+          >Exercício 3: teste de velocidade</a
         >
       </nav>
       <h1>Estruturas Condicionais: IF e ELSE</h1>
@@ -60,6 +62,6 @@ const resultado = condicao ? resultado_verdadeiro : resultado_falso;
         </pre>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
