--- a/js/condicionais/switch/index.html
+++ b/js/condicionais/switch/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Estruturas Condicionais: Switch</title>
   </head>
@@ -10,12 +12,12 @@
     <header>
       <nav>
         <a class="nav_pages"
-          href="/js/exercicios/exercicio-2/p2-calculo_de_dano.html"
-          >Exercício 4: Calculo de dano.</a
+          href="/js/exercicios/exercicio-4/index.html"
+          >Exercício 4: Calculo de dano</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
-        <a class="nav_pages" href="/js/exercicios/exercicio-3/conversor.html"
-          >Exercício 5: Conversor de medidas.</a
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+        <a class="nav_pages" href="/js/exercicios/exercicio-5/index.html"
+          >Exercício 5: Conversor de medidas</a
         >
       </nav>
       <h1>Estruturas Condicionais: Switch</h1>
@@ -59,6 +61,6 @@ switch (expressao) {
         </ul>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
