--- a/js/escopo/index.html
+++ b/js/escopo/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <link rel="stylesheet" href="style.css">
   <title>Escopo em JavaScript</title>
 </head>
 <body> 
   <header>
     <nav>
-      <a class="nav_pages" href="/js/funcao/retorno_da_funcao/index.html">Aula anterior: Retorno de uma Funções</a>
-      <a class="nav_pages" href="/">Central de aulas</a>
-      <a class="nav_pages" href="/js/exercicios/exercicio-14/calculadora_geométrica.html">Exercício 14: Calculadora Geométrica</a>
+      <a class="nav_pages" href="/js/funcao/retorno_da_funcao/index.html">Retorno de uma Funções</a>
+      <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+      <a class="nav_pages" href="/js/exercicios/exercicio-14/index.html">Exercício 14: Calculadora Geométrica</a>
     </nav>
     <h1>Escopo em JavaScript</h1>
   </header>
