--- a/js/estruturas-de-dados/array/index.html
+++ b/js/estruturas-de-dados/array/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="../style.css" />
     <title>Arrays no JavaScript</title>
   </head>
@@ -11,14 +13,14 @@
       <nav>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-6/procurando_palindromos.html"
+          href="/js/exercicios/exercicio-10/index.html"
           >Exercício 10: Procurando Palíndromos</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
           href="/js/estruturas-de-dados/trabalhando_com_array/index.html"
-          >Próxima aula: Novas Formas de Trabalhar com Arrays</a
+          >Novas Formas de Trabalhar com Arrays</a
         >
       </nav>
       <h1>Arrays no JavaScript</h1>
@@ -82,6 +84,6 @@ console.log(frutas[3]); // undefined
       </ul>
     </div>
 
-    <script src="array.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
