--- a/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html
+++ b/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="../style.css" />
     <title>Arrays Bidimensionais (Matrizes)</title>
   </head>
   <body>
     <header>
       <nav>
-        <a class="nav_pages" href="/js/exercicios/exercicio-7/pilha_de_cartas.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-12/index.html"
           >Exercício 12: Pilha de Cartas</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/estruturas-de-dados/objetos/index.html"
-          >Próxima aula: Objetos no JavaScript</a
+          >Objetos no JavaScript</a
         >
       </nav>
       <h1>Arrays Bidimensionais (Matrizes)</h1>
@@ -76,6 +78,6 @@ console.log(matriz);
       </ul>
     </div>
 
-    <script src="matrizes.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
