--- a/js/estruturas-de-dados/objetos/index.html
+++ b/js/estruturas-de-dados/objetos/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="../style.css" />
     <title>Objetos no JavaScript</title>
 </head>
 <body>
     <header>
         <nav>
-            <a class="nav_pages" href="/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html">Aula anterior: Arrays Bidimensionais (Matrizes)</a>
-            <a class="nav_pages" href="/">Central de aulas</a>
-            <a class="nav_pages" href="/js/exercicios/exercicio-8/cadastro_de_imoveis.html">Exercício 13: Cadastro de imóveis</a>
+            <a class="nav_pages" href="/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html">Arrays Bidimensionais (Matrizes)</a>
+            <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+            <a class="nav_pages" href="/js/exercicios/exercicio-13/index.html">Exercício 13: Cadastro de imóveis</a>
         </nav>
         <h1>Objetos no JavaScript</h1>
     </header>
@@ -59,6 +61,6 @@ console.log(pessoa.apresentar()); // Saída: Meu nome é João e tenho 25 anos.
         </ul>
     </div>
 
-    <script src="./objetos.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
