--- a/js/estruturas_de_repetição/do-while/index.html
+++ b/js/estruturas_de_repetição/do-while/index.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Estruturas de Repetição: Do While</title>
   </head>
   <body> 
     <header>
       <nav>
-        <a class="nav_pages" href="/js/exercicios/exercicio-4/novas_cidades.html"
-          >Exercício 6: Visitando novas cidades.</a
+        <a class="nav_pages" href="/js/exercicios/exercicio-6/index.html"
+          >Exercício 6: Visitando novas cidades</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-5/menu_interativo.html"
-          >Exercício 7: Menu Interativo.</a
+          href="/js/exercicios/exercicio-7/index.html"
+          >Exercício 7: Menu Interativo</a
         >
       </nav>
       <h1>Estruturas de Repetição: Do While</h1>
@@ -57,6 +59,6 @@ alert("Velocidade final: " + velocidade); // -20
         <p>Utilizado quando é necessário garantir que o código dentro do laço seja executado pelo menos uma vez, independentemente da condição inicial.</p>
     </div>
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
