--- a/js/estruturas_de_repetição/for/index.html
+++ b/js/estruturas_de_repetição/for/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Estrutura de Repetição FOR</title>
   </head>
@@ -11,12 +13,12 @@
       <nav>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-5/controle_financeiro.html"
-          >Exercício 8: Controle financeiro.</a
+          href="/js/exercicios/exercicio-8/index.html"
+          >Exercício 8: Controle financeiro</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
-        <a class="nav_pages" href="/js/exercicios/exercicio-6/robo_da_tabuada.html"
-          >Exercício 9: Robô da Tabuada.</a
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+        <a class="nav_pages" href="/js/exercicios/exercicio-9/index.html"
+          >Exercício 9: Robô da Tabuada</a
         >
       </nav>
       <h1>Estrutura de Repetição FOR</h1>
@@ -44,6 +46,6 @@ for (let i = 0; i <= 10; i++) {
         </ul>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
