--- a/js/estruturas_de_repetição/while/index.html
+++ b/js/estruturas_de_repetição/while/index.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Estruturas de Repetição: While</title>
   </head>
   <body>
     <header>
       <nav>
-        <a class="nav_pages" href="/js/exercicios/exercicio-3/conversor.html"
-          >Exercício 5: Conversor de medidas.</a
+        <a class="nav_pages" href="/js/exercicios/exercicio-5/index.html"
+          >Exercício 5: Conversor de medidas</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-4/novas_cidades.html"
-          >Exercício 6: Visitando novas cidades.</a
+          href="/js/exercicios/exercicio-6/index.html"
+          >Exercício 6: Visitando novas cidades</a
         >
       </nav>
       <h1>Estruturas de Repetição: While</h1>
@@ -60,6 +62,6 @@ while (contador &lt; 5) {
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
