--- a/js/exercicios/exercicio-1/index.html
+++ b/js/exercicios/exercicio-1/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Cadastro de Recrutas</title>
   </head>
@@ -10,13 +12,13 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/recursos_nativos/index.html"
-          >Aula anterior: Recursos nativos do navegador</a
+          >Recursos nativos do navegador</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-1/p2-calculadora.html"
-          >Exercício 2: Calculadora de 4 Operações.</a
+          href="/js/exercicios/exercicio-2/index.html"
+          >Exercício 2: Calculadora de 4 Operações</a
         >
       </nav>
       <h1>Exercício 1: Cadastro de Recrutas</h1>
@@ -61,6 +63,6 @@ alert(
       </div>
     </div>
 
-    <script src="./p1-cadastro.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
