--- a/js/exercicios/exercicio-6/index.html
+++ b/js/exercicios/exercicio-6/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Visitando novas cidades</title>
   </head>
@@ -10,13 +12,13 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/estruturas_de_repetição/while/index.html"
-          >Estruturas de Repetição: While.</a
+          >Estruturas de Repetição: While</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
           href="/js/estruturas_de_repetição/do-while/index.html"
-          >Estruturas de Repetição: Do While.</a
+          >Estruturas de Repetição: Do While</a
         >
       </nav>
       <h1>Exercício 6: Visitando novas cidades</h1>
@@ -62,6 +64,6 @@ alert(mensagem);
       </div>
     </div>
 
-    <script src="novas_cidades.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
