--- a/js/exercicios/exercicio-7/index.html
+++ b/js/exercicios/exercicio-7/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Menu Interativo</title>
   </head>
@@ -12,13 +14,13 @@
         <a
           class="nav_pages"
           href="/js/estruturas_de_repetição/do-while/index.html"
-          >Aula anterior: Estruturas de Repetição: Do While.</a
+          >Estruturas de Repetição: Do While</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-5/controle_financeiro.html"
-          >Exercício 8: Controle Financeiro.</a
+          href="/js/exercicios/exercicio-8/index.html"
+          >Exercício 8: Controle Financeiro</a
         >
       </nav>
       <h1>Exercício 7: Menu Interativo</h1>
@@ -93,6 +95,6 @@ do {
       </ul>
     </div>
 
-    <script src="./menu_interativo.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
