--- a/js/exercicios/exercicio-8/index.html
+++ b/js/exercicios/exercicio-8/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Controle Financeiro</title>
   </head>
@@ -11,12 +13,12 @@
       <nav>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-5/menu_interativo.html"
-          >Exercício 7: Menu interativo.</a
+          href="/js/exercicios/exercicio-7/index.html"
+          >Exercício 7: Menu interativo</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/estruturas_de_repetição/for/index.html"
-          >Proxima aula: Estrutura de repetição: for.</a
+          >Estrutura de repetição: for</a
         >
       </nav>
       <h1>Exercício 8: Controle Financeiro</h1>
@@ -104,6 +106,6 @@ do {
       </ul>
     </div>
 
-    <script src="./controle_financeiro.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
