--- a/js/funcao/index.html
+++ b/js/funcao/index.html
@@ -1,72 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Funções no JavaScript</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Funções no JavaScript</title>
+  </head>
+  <body>
     <header>
-        <nav>
-          <a class="nav_pages" href="/js/exercicios/exercicio-8/cadastro_de_imoveis.html">Exercício 13: Cadastro de imóveis</a>
-          <a class="nav_pages" href="/">Central de aulas</a>
-          <a class="nav_pages" href="/js/funcao/parametros_em_Funcoes/index.html">Próxima aula: Parâmetros de uma função</a>
-        </nav>
-        <h1>Funções no JavaScript</h1>
+      <nav>
+        <a
+          class="nav_pages"
+          href="/js/exercicios/exercicio-13/index.html"
+          >Exercício 13: Cadastro de imóveis</a
+        >
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+        <a class="nav_pages" href="/js/funcao/parametros_em_Funcoes/index.html"
+          >Parâmetros de uma função</a
+        >
+      </nav>
+      <h1>Funções no JavaScript</h1>
     </header>
 
     <div class="section">
-        <h2>O que é uma função?</h2>
-        <p>Uma função é uma estrutura que permite declarar um procedimento e executá-lo programaticamente. Trata-se de um bloco de código que pode ser armazenado e executado quando necessário, possibilitando a reutilização do mesmo código várias vezes.</p>
+      <h2>O que é uma função?</h2>
+      <p>
+        Uma função é uma estrutura que permite declarar um procedimento e
+        executá-lo programaticamente. Trata-se de um bloco de código que pode
+        ser armazenado e executado quando necessário, possibilitando a
+        reutilização do mesmo código várias vezes.
+      </p>
     </div>
 
     <div class="section">
-        <h2>Partes de uma função</h2>
-        <ul>
-            <li><strong>Entrada:</strong> parâmetros/argumentos [opcional]</li>
-            <li><strong>Procedimento:</strong> bloco de código a ser executado</li>
-            <li><strong>Saída:</strong> retorno [opcional]</li>
-        </ul>
+      <h2>Partes de uma função</h2>
+      <ul>
+        <li><strong>Entrada:</strong> parâmetros/argumentos [opcional]</li>
+        <li><strong>Procedimento:</strong> bloco de código a ser executado</li>
+        <li><strong>Saída:</strong> retorno [opcional]</li>
+      </ul>
     </div>
 
     <div class="section">
-        <h2>Sintaxe</h2>
-        <div class="code">
-            <pre>
+      <h2>Sintaxe</h2>
+      <div class="code">
+        <pre>
 function nomeDaFuncao() {
   // procedimentos
 }
-            </pre>
-        </div>
-        <p><strong>function:</strong> palavra reservada</p>
-        <p><strong>nomeDaFuncao:</strong> nome escolhido para a função</p>
-        <p><strong>():</strong> parâmetros (mesmo que vazio)</p>
-        <p><strong>{}:</strong> corpo da função (bloco de código)</p>
+            </pre
+        >
+      </div>
+      <p><strong>function:</strong> palavra reservada</p>
+      <p><strong>nomeDaFuncao:</strong> nome escolhido para a função</p>
+      <p><strong>():</strong> parâmetros (mesmo que vazio)</p>
+      <p><strong>{}:</strong> corpo da função (bloco de código)</p>
     </div>
 
     <div class="section">
-        <h2>Utilização</h2>
-        <p>A função é declarada utilizando a palavra-chave <code>function</code>. Ela é chamada pelo nome, seguido de parênteses:</p>
-        <div class="code">
-            <pre>
+      <h2>Utilização</h2>
+      <p>
+        A função é declarada utilizando a palavra-chave <code>function</code>.
+        Ela é chamada pelo nome, seguido de parênteses:
+      </p>
+      <div class="code">
+        <pre>
 nomeDaFuncao();
-            </pre>
-        </div>
-        <p>Você pode chamar uma função quantas vezes for necessário.</p>
+            </pre
+        >
+      </div>
+      <p>Você pode chamar uma função quantas vezes for necessário.</p>
     </div>
 
     <div class="section">
-        <h2>Resumo</h2>
-        <ul>
-            <li>Permite reutilizar código.</li>
-            <li>Declara um procedimento.</li>
-            <li>Executa programaticamente com <code>()</code>.</li>
-            <li>Pode ter entradas e saídas (opcionais).</li>
-        </ul>
+      <h2>Resumo</h2>
+      <ul>
+        <li>Permite reutilizar código.</li>
+        <li>Declara um procedimento.</li>
+        <li>Executa programaticamente com <code>()</code>.</li>
+        <li>Pode ter entradas e saídas (opcionais).</li>
+      </ul>
     </div>
-  
-    <script src="./index.js"></script>
-  
-</body>
+
+    <script src="./script.js"></script>
+  </body>
 </html>
