--- a/js/Usando_js_no_html/index.html
+++ b/js/Usando_js_no_html/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Usando JavaScript no HTML</title>
     <script>
       console.log("Olá, mundo!")
     </script>
-    <script src="./index1.js"></script>
+    <script src="./script1.js"></script>
   </head>
   <body>
     <header>
@@ -16,9 +18,9 @@
         <a class="nav_pages" href="/js/operadores_e_expressoes/index.html"
           >Operadores e expressões</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/recursos_nativos/index.html"
-          >Proxima aula: Recursos nativos do navegador.</a
+          >Recursos nativos do navegador</a
         >
       </nav>
       <h1>Usando JavaScript no HTML</h1>
@@ -66,6 +68,6 @@
     <script>
       console.log("Tudo bem?")
     </script>
-    <script src="./index2.js"></script>
+    <script src="./script2.js"></script>
   </body>
 </html>
