--- a/js/estruturas-de-dados/trabalhando_com_array/index.html
+++ b/js/estruturas-de-dados/trabalhando_com_array/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <link rel="stylesheet" href="../style.css">
   <title>trabalhando com array</title>
 </head>
 <body> 
     <header>
         <nav>
-            <a class="nav_pages" href="/js/estruturas-de-dados/array/index.html">Aula anterior: Arrays no JavaScript</a>
-            <a class="nav_pages" href="/">Central de aulas</a>
-            <a class="nav_pages" href="/js/exercicios/exercicio-7/fila_de_espera.html">Exercício 11: Fila de Espera</a>
+            <a class="nav_pages" href="/js/estruturas-de-dados/array/index.html">Arrays no JavaScript</a>
+            <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+            <a class="nav_pages" href="/js/exercicios/exercicio-11/index.html">Exercício 11: Fila de Espera</a>
         </nav>
         <h1>Novas Formas de Trabalhar com Arrays</h1>
     </header>
@@ -136,6 +138,6 @@ for (let i = 0; i < frutas.length; i++) {
         <p>Essas operações permitem trabalhar com arrays de forma dinâmica e flexível em seus programas.</p>
     </div>
   
-  <script src="index.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
