--- a/js/exercicios/exercicio-10/index.html
+++ b/js/exercicios/exercicio-10/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Procurando Palíndromos</title>
   </head>
@@ -11,12 +13,12 @@
       <nav>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-6/robo_da_tabuada.html"
+          href="/js/exercicios/exercicio-9/index.html"
           >Exercício 9: Robô da Tabuada</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/estruturas-de-dados/array/index.html"
-          >Próxima aula: Arrays no JavaScript</a
+          >Arrays no JavaScript</a
         >
       </nav>
       <h1>Exercício 10: Procurando Palíndromos</h1>
@@ -66,6 +68,6 @@ if (palavra === palavraInvertida) {
       </ul>
     </div>
 
-    <script src="procurando_palindromos.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
