--- a/js/exercicios/exercicio-11/index.html
+++ b/js/exercicios/exercicio-11/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <link rel="stylesheet" href="style.css" />
   <title>Fila de Espera</title>
 </head>
     <header>
         <nav>
-            <a class="nav_pages" href="/js/estruturas-de-dados/trabalhando_com_array/index.html">Aula anterior: Novas Formas de Trabalhar com Arrays</a>
-            <a class="nav_pages" href="/">Central de aulas</a>
-            <a class="nav_pages" href="/js/exercicios/exercicio-7/pilha_de_cartas.html">Exercício 12: Pilha de Cartas</a>
+            <a class="nav_pages" href="/js/estruturas-de-dados/trabalhando_com_array/index.html">Novas Formas de Trabalhar com Arrays</a>
+            <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+            <a class="nav_pages" href="/js/exercicios/exercicio-12/index.html">Exercício 12: Pilha de Cartas</a>
         </nav>
         <h1>Exercício 11: Fila de Espera</h1>
     </header>
@@ -75,6 +77,6 @@ do {
         </ul>
     </div>
 
-  <script src="fila_de_espera.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
