--- a/js/exercicios/exercicio-12/index.html
+++ b/js/exercicios/exercicio-12/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Pilha de Cartas</title>
   </head>
@@ -11,14 +13,14 @@
       <nav>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-7/fila_de_espera.html"
+          href="/js/exercicios/exercicio-11/index.html"
           >Exercício 11: Fila de Espera</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
           href="/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html"
-          >Próxima aula: Arrays Bidimensionais (Matrizes)</a
+          >Arrays Bidimensionais (Matrizes)</a
         >
       </nav>
       <h1>Exercício 12: Pilha de Cartas</h1>
@@ -95,6 +97,6 @@ do {
       </ul>
     </div>
 
-    <script src="pilha_de_cartas.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
