--- a/js/exercicios/exercicio-13/index.html
+++ b/js/exercicios/exercicio-13/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Cadastro de imóveis</title>
   </head>
@@ -10,10 +12,10 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/estruturas-de-dados/objetos/index.html"
-          >Aula anterior: Objetos no JavaScript</a
+          >Objetos no JavaScript</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
-        <a class="nav_pages" href="/js/funcao/index.html">Próxima aula: Funções no JavaScript</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+        <a class="nav_pages" href="/js/funcao/index.html">Funções no JavaScript</a>
       </nav>
       <h1>Exercício 13: Cadastro de imóveis</h1>
     </header>
