--- a/js/exercicios/exercicio-2/index.html
+++ b/js/exercicios/exercicio-2/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Calculadora de 4 Operações</title>
   </head>
   <body>
     <header>
       <nav>
-        <a class="nav_pages" href="/js/exercicios/exercicio-1/p1-cadastro.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-1/index.html"
           >Exercício 1: Cadastro de Recrutas</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/comparação_de_dados/index.html"
-          >Proxima aula: Comparação de dados</a
+          >Comparação de dados</a
         >
       </nav>
       <h1>Exercício 2: Calculadora de 4 Operações.</h1>
@@ -58,6 +60,6 @@ alert(
       </div>
     </div>
 
-    <script src="./p2-calculadora.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
