--- a/js/exercicios/exercicio-3/index.html
+++ b/js/exercicios/exercicio-3/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Teste de Velocidade</title>
   </head>
@@ -11,13 +13,13 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/condicionais/if_else/index.html"
-          >Aula anterior: Estruturas Condicionais: IF e ELSE.</a
+          >Estruturas Condicionais: IF e ELSE</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-2/p2-calculo_de_dano.html"
-          >Exercício 4: Cálculo de Dano.</a
+          href="/js/exercicios/exercicio-4/index.html"
+          >Exercício 4: Cálculo de Dano</a
         >
       </nav>
       <h1>Exercício 3: Teste de velocidade</h1>
@@ -53,6 +55,6 @@ if (velocidadeVeiculo1 > velocidadeVeiculo2) {
       </div>
     </div>
 
-    <script src="./velocidade.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
