--- a/js/exercicios/exercicio-4/index.html
+++ b/js/exercicios/exercicio-4/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Cálculo de Dano</title>
   </head>
@@ -11,12 +13,12 @@
       <nav>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-2/p1-teste_de_velocidade.html"
-          >Exercício 3: Teste de velocidade.</a
+          href="/js/exercicios/exercicio-3/index.html"
+          >Exercício 3: Teste de velocidade</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/condicionais/switch/index.html"
-          >Proxima aula: Estruturas Condicionais: Switch.</a
+          >Estruturas Condicionais: Switch</a
         >
       </nav>
       <h1>Exercício 4: Cálculo de Dano</h1>
@@ -91,6 +93,6 @@
       </div>
     </div>
 
-    <script src="./p2-calculo_de_dano.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
