--- a/js/exercicios/exercicio-5/index.html
+++ b/js/exercicios/exercicio-5/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Conversor de medidas</title>
   </head>
@@ -10,11 +12,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/condicionais/switch/index.html"
-          >aula anterior: Estruturas Condicionais: Switch.</a
+          >Estruturas Condicionais: Switch</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/estruturas_de_repetição/while/index.html"
-          >Proxima aula: Estruturas de Repetição: While.</a
+          >Estruturas de Repetição: While</a
         >
       </nav>
       <h1>Exercício 5: Conversor de medidas</h1>
@@ -90,6 +92,6 @@ switch(opcao) {
       </div>
     </div>
 
-    <script src="./conversor.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
