--- a/js/exercicios/exercicio-9/index.html
+++ b/js/exercicios/exercicio-9/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Robô da Tabuada</title>
   </head>
@@ -10,13 +12,13 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/estruturas_de_repetição/for/index.html"
-          >Aula anterior: Estrutura de Repetição FOR.</a
+          >Estrutura de Repetição FOR</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a
           class="nav_pages"
-          href="/js/exercicios/exercicio-6/procurando_palindromos.html"
-          >Exercício 10: Procurando Palíndromos.</a
+          href="/js/exercicios/exercicio-10/index.html"
+          >Exercício 10: Procurando Palíndromos</a
         >
       </nav>
       <h1>Exercício 9: Robô da Tabuada</h1>
@@ -66,6 +68,6 @@ if (numero >= 1 && numero <= 20) {
       </ul>
     </div>
 
-    <script src="robo_da_tabuada.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
