--- a/js/funcao/parametros_em_Funcoes/index.html
+++ b/js/funcao/parametros_em_Funcoes/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <link rel="stylesheet" href="style.css">
   <title>Parâmetros de uma função</title>
 </head>
 <body> 
     <header>
         <nav>
-          <a class="nav_pages" href="/js/funcao/index.html">Aula anterior: Funções no JavaScript</a>
-          <a class="nav_pages" href="/">Central de aulas</a>
-          <a class="nav_pages" href="/js/funcao/retorno_da_funcao/index.html">Próxima aula: Retorno de uma função</a>
+          <a class="nav_pages" href="/js/funcao/index.html">Funções no JavaScript</a>
+          <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+          <a class="nav_pages" href="/js/funcao/retorno_da_funcao/index.html">Retorno de uma função</a>
         </nav>
         <h1>Parâmetros de uma função</h1>
     </header>
