--- a/js/operadores_e_expressoes/index.html
+++ b/js/operadores_e_expressoes/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Operadores e expressões</title>
   </head>
   <body>
     <header>
       <nav>
-        <a class="nav_pages" href="/js/variaveis/index.html">Aula anterior: variáveis</a>
-        <a class="nav_pages" href="/">Central de aulas</a>
-        <a class="nav_pages" href="/js/Usando_js_no_html/index.html">Proxima aula: Usando JavaScript no HTML.</a>
+        <a class="nav_pages" href="/js/variaveis/index.html">variáveis</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+        <a class="nav_pages" href="/js/Usando_js_no_html/index.html">JavaScript no HTML</a>
       </nav>
       <h1>Operadores e expressões</h1>
     </header>
