--- a/js/operadores_logicos/index.html
+++ b/js/operadores_logicos/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <link rel="stylesheet" href="style.css" />
     <title>Operadores Lógicos</title>
   </head>
@@ -10,11 +12,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/comparação_de_dados/index.html"
-          >Aula anterior: Comparação de dados.</a
+          >Comparação de dados</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/condicionais/if_else/index.html"
-          >Proxima aula: Estruturas Condicionais: IF e ELSE.</a
+          >Estruturas Condicionais: IF e ELSE</a
         >
       </nav>
       <h1>Operadores Lógicos</h1>
