--- a/js/recursos_nativos/index.html
+++ b/js/recursos_nativos/index.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Recursos nativos do navegador</title>
   </head>
@@ -11,11 +13,11 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/Usando_js_no_html/index.html"
-          >Aula anterior: Usando o JavaScript no HTML</a
+          >Usando o JavaScript no HTML</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
-        <a class="nav_pages" href="/js/exercicios/exercicio-1/p1-cadastro.html"
-          >Exercício 1: Cadastro de Recrutas.</a
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+        <a class="nav_pages" href="/js/exercicios/exercicio-1/index.html"
+          >Exercício 1: Cadastro de Recrutas</a
         >
       </nav>
       <h1>Recursos nativos do navegador</h1>
@@ -45,6 +47,6 @@
       <p>Representa o documento HTML. Útil para interagir com a página mais tarde.</p>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
