--- a/js/tipos_de_dasos/index.html
+++ b/js/tipos_de_dasos/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Tipos de dados</title>
   </head>
   <body>
     <header>
       <nav>
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/variaveis/index.html"
-          >Proxima aula: variáveis.</a
+          >variáveis</a
         >
       </nav>
       <h1>Tipos de dados</h1>
