--- a/js/variaveis/index.html
+++ b/js/variaveis/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>variáveis</title>
   </head>
@@ -12,9 +14,9 @@
         <a class="nav_pages" href="/js/tipos_de_dasos/index.html"
           >Tipos primitivos</a
         >
-        <a class="nav_pages" href="/">Central de aulas</a>
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="/js/operadores_e_expressoes/index.html"
-          >Proxima aula: Operadores e expressões.</a
+          >Operadores e expressões</a
         >
       </nav>
       <h1>variáveis</h1>
